# testStylo

./: README.md  algo.py  final.py  pyproject.toml  styloTest.py  test.py
